# enterprise-python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: main.py
src/enterprise_python_template.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
