[project]
name = "enterprise-python-template"
version = "0.1.0"
description = "A production-ready Python enterprise project template with CI/CD."
authors = [{ name = "Li Jiahao" }]
requires-python = ">=3.10"

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
